--- a/src/style/index.css
+++ b/src/style/index.css
@@ -173,6 +173,23 @@ button:hover{
   cursor: pointer;
 }
 
+.settings-menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: #263a5f;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  transition: 1s;
+  
+  animation: slideIn 0.3s forwards;
+}
+
 .dark-mode-switch-container{
   display: flex;
   align-items: center;
@@ -238,23 +255,6 @@ button:hover{
 
 .fa-sun {
   color: #F5EC30;
-}
-
-.settings-menu{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  right: 0;
-  top: 0;
-  background-color: #263a5f;
-  width: 100vw;
-  height: 100vh;
-  z-index: 5;
-  transition: 1s;
-  
-  animation: slideIn 0.3s forwards;
 }
 
 .selects-container{
@@ -473,6 +473,19 @@ select{
 }
 
 /* ========================= Design for Other Screens ========================= */
+
+@media(max-width: 600px){
+  .settings-menu{
+    font-size: .7em;
+  }
+  .ball{
+    width: 1.5em;
+    height: 1.5em;
+  }
+  .switch:checked + .label .ball {
+    transform: translateX(1.5em);
+  }
+}
 
 
 @media(min-width: 600px){
